MMFMWK-9426 decodebin3: fix rtsp stream random playback fail with "No suitable plugins found"

1.24.7 performs stream_reconfigure in advance if all streams are
present for that collection during STREAM_START. rtsp stream has
respective collection for video and audio, if do stream_recofigure
of stream-start before receiving caps event, decodebin3 cannot find
decoder for "application/x-rtp" then report missing plugin error.

For collection that has only one stream, make a workaround to let
decodebin3 fallback to do stream_recofigure after receiving caps
event like 1.24.0.

Issue: https://gitlab.freedesktop.org/gstreamer/gstreamer/-/issues/3859